<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:key="save_parse_error_body"
        android:summary="@string/settings_advanced_save_parse_error_body_summary"
        android:title="@string/settings_advanced_save_parse_error_body"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="save_crash_log"
        android:summary="@string/settings_advanced_save_crash_log_summary"
        android:title="@string/settings_advanced_save_crash_log"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="dump_logcat"
        android:summary="@string/settings_advanced_dump_logcat_summary"
        android:title="@string/settings_advanced_dump_logcat"
        app:iconSpaceReserved="false" />

    <com.hippo.ehviewer.preference.ClearDownloadPathCachePreference
        android:key="clear_download_path_cache"
        android:summary="@string/settings_advanced_clear_download_path_cache_summary"
        android:title="@string/settings_advanced_clear_download_path_cache"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="clear_memory_cache"
        android:summary="@string/settings_advanced_clear_memory_cache_summary"
        android:title="@string/settings_advanced_clear_memory_cache"
        app:iconSpaceReserved="false" />

    <rikka.preference.SimpleMenuPreference
        android:defaultValue="320"
        android:key="read_cache_size"
        android:summary="%s"
        android:title="@string/settings_advanced_read_cache_size"
        app:entries="@array/read_cache_size_entries"
        app:entryValues="@array/read_cache_size_entry_values"
        app:iconSpaceReserved="false" />

    <rikka.preference.SimpleMenuPreference
        android:defaultValue="system"
        android:key="app_language"
        android:summary="%s"
        android:title="@string/settings_advanced_app_language_title"
        app:entries="@array/app_language_entries"
        app:entryValues="@array/app_language_entry_values"
        app:iconSpaceReserved="false" />

    <com.hippo.ehviewer.preference.ProxyPreference
        android:key="proxy"
        android:title="@string/settings_advanced_proxy"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="built_in_hosts_2"
        android:summary="@string/settings_advanced_built_in_hosts_summary"
        android:title="@string/settings_advanced_built_in_hosts_title"
        app:iconSpaceReserved="false" />

    <Preference
        android:fragment="com.hippo.ehviewer.ui.fragment.HostsFragment"
        android:key="custom_hosts_2"
        android:summary="@string/settings_advanced_custom_hosts_summary"
        android:title="@string/settings_advanced_custom_hosts_title"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="domain_fronting"
        android:summary="@string/settings_advanced_domain_fronting_summary"
        android:title="@string/settings_advanced_domain_fronting_title"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="export_data"
        android:summary="@string/settings_advanced_export_data_summary"
        android:title="@string/settings_advanced_export_data"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="import_data"
        android:summary="@string/settings_advanced_import_data_summary"
        android:title="@string/settings_advanced_import_data"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="open_by_default"
        android:title="@string/open_by_default"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
