<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hippo.ehviewer.preference.SignOutPreference
        android:key="sign_out"
        android:summary="@string/settings_eh_sign_out_summary"
        android:title="@string/settings_eh_sign_out"
        app:iconSpaceReserved="false" />

    <com.hippo.ehviewer.preference.IdentityCookiePreference
        android:key="identity_cookie"
        android:summary="@string/settings_eh_identity_cookies_summary"
        android:title="@string/settings_eh_identity_cookies"
        app:iconSpaceReserved="false" />

    <com.takisoft.preferencex.SimpleMenuPreference
        android:defaultValue="1"
        android:key="gallery_site"
        android:summary="%s"
        android:title="@string/settings_eh_gallery_site"
        app:entries="@array/gallery_site_entries"
        app:entryValues="@array/gallery_site_entry_values"
        app:iconSpaceReserved="false" />

    <com.hippo.ehviewer.preference.SignInRequiredActivityPreference
        android:key="u_config"
        android:summary="@string/settings_u_config_summary"
        android:title="@string/settings_u_config"
        app:activity="com.hippo.ehviewer.ui.UConfigActivity"
        app:iconSpaceReserved="false" />

    <com.hippo.ehviewer.preference.SignInRequiredActivityPreference
        android:key="my_tags"
        android:summary="@string/settings_my_tags_summary"
        android:title="@string/settings_my_tags"
        app:activity="com.hippo.ehviewer.ui.MyTagsActivity"
        app:iconSpaceReserved="false" />

    <com.takisoft.preferencex.SimpleMenuPreference
        android:defaultValue="-1"
        android:entries="@array/night_mode_entries"
        android:entryValues="@array/night_mode_values"
        android:key="theme"
        android:summary="%s"
        android:title="@string/settings_eh_theme"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:key="black_dark_theme"
        android:title="@string/black_dark_theme"
        app:iconSpaceReserved="false" />

    <com.takisoft.preferencex.SimpleMenuPreference
        android:defaultValue="0"
        android:key="launch_page"
        android:summary="%s"
        android:title="@string/settings_eh_launch_page"
        app:entries="@array/launch_page_entries"
        app:entryValues="@array/launch_page_entry_values"
        app:iconSpaceReserved="false" />

    <com.takisoft.preferencex.SimpleMenuPreference
        android:defaultValue="0"
        android:key="list_mode"
        android:summary="%s"
        android:title="@string/settings_eh_list_mode"
        app:entries="@array/list_mode_entries"
        app:entryValues="@array/list_mode_entry_values"
        app:iconSpaceReserved="false" />

    <com.takisoft.preferencex.SimpleMenuPreference
        android:defaultValue="0"
        android:key="detail_size"
        android:summary="%s"
        android:title="@string/settings_eh_detail_size"
        app:entries="@array/detail_size_entries"
        app:entryValues="@array/detail_size_entry_values"
        app:iconSpaceReserved="false" />

    <com.takisoft.preferencex.SimpleMenuPreference
        android:defaultValue="1"
        android:key="thumb_size"
        android:summary="%s"
        android:title="@string/settings_eh_thumb_size"
        app:entries="@array/thumb_size_entries"
        app:entryValues="@array/thumb_size_entry_values"
        app:iconSpaceReserved="false" />

    <com.takisoft.preferencex.SimpleMenuPreference
        android:defaultValue="0"
        android:key="thumb_resolution"
        android:summary="@string/settings_eh_thumb_resolution_summary"
        android:title="@string/settings_eh_thumb_resolution"
        app:entries="@array/thumb_resolution_entries"
        app:entryValues="@array/thumb_resolution_entry_values"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="fix_thumb_url"
        android:title="@string/settings_eh_fix_thumb_url"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="show_jpn_title"
        android:summary="@string/settings_eh_show_jpn_title_summary"
        android:title="@string/settings_eh_show_jpn_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="show_gallery_pages"
        android:summary="@string/settings_eh_show_gallery_pages_summary"
        android:title="@string/settings_eh_show_gallery_pages"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="show_tag_translations"
        android:summary="@string/settings_eh_show_tag_translations_summary"
        android:title="@string/settings_eh_show_tag_translations"
        app:iconSpaceReserved="false" />

    <com.hippo.preference.UrlPreference
        android:key="tag_translations_source"
        android:title="@string/settings_eh_tag_translations_source"
        app:iconSpaceReserved="false"
        app:url="@string/settings_eh_tag_translations_source_url" />

    <com.hippo.preference.ActivityPreference
        android:key="filter"
        android:summary="@string/settings_eh_filter_summary"
        android:title="@string/settings_eh_filter"
        app:activity="com.hippo.ehviewer.ui.FilterActivity"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="cellular_network_warning"
        android:title="@string/settings_eh_cellular_network_warning"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
