<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/spacer_keyline"
        android:orientation="vertical"
        android:paddingHorizontal="?dialogPreferredPadding"
        android:paddingTop="@dimen/abc_dialog_padding_top_material"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/settings_read_screen_rotation" />

            <com.hippo.widget.CuteSpinner
                android:id="@+id/screen_rotation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:entries="@array/screen_rotation_entries" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/settings_read_reading_direction" />

            <com.hippo.widget.CuteSpinner
                android:id="@+id/reading_direction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:entries="@array/reading_direction_entries" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/settings_read_page_scaling" />

            <com.hippo.widget.CuteSpinner
                android:id="@+id/page_scaling"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:entries="@array/page_scaling_entries" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/settings_read_start_position" />

            <com.hippo.widget.CuteSpinner
                android:id="@+id/start_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:entries="@array/start_position_entries" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/read_theme" />

            <com.hippo.widget.CuteSpinner
                android:id="@+id/read_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:entries="@array/read_theme_entries" />

        </LinearLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/keep_screen_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_keep_screen_on" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/show_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_show_clock" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/show_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_show_progress" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/show_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_show_battery" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/show_page_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_show_page_interval" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/volume_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_volume_page"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/reverse_volume_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_reverse_volume" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/reading_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_reading_fullscreen" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/custom_screen_lightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_read_custom_screen_lightness" />

        <SeekBar
            android:id="@+id/screen_lightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="200" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
